--- a/public/views/layout_head.html.erb
+++ b/public/views/layout_head.html.erb
@@ -1,5 +1,5 @@
 
 <%= stylesheet_link_tag "#{@base_url}/assets/ias_application.css", media: :all %>
 
-<%# = stylesheet_link_tag "#{@base_url}/assets/harvard.css", media: :all % -- %>
-<script type="javascript">alert("we got it?")</script>
+<%= stylesheet_link_tag "#{@base_url}/assets/ias.css", media: :all %>
+
