--- a/public/assets/ias.css
+++ b/public/assets/ias.css
@@ -511,12 +511,9 @@ div.nav-pill.disabled {
     opacity: 0.65;
     filter: alpha(opacity=65);
 }
-
 div.nav-pill.disabled > a {
-    text-decoration: none;
-    cursor: not-allowed;
-    opacity: 0.65;
-    filter: alpha(opacity=65);
+  text-decoration: none;
+  background-color: #ADA089;
 }
 
 /* restructuring of search */
