--- a/public/views/layout_head.html.erb
+++ b/public/views/layout_head.html.erb
@@ -3,3 +3,17 @@
 
 <%= stylesheet_link_tag "#{@base_url}/assets/ias.css", media: :all %>
 
+<% 
+# re-order the MAIN_MENU array so that classifications come right after resources
+#  This only happens once; otherwise the 'if' fails
+
+if $MAIN_MENU.last[0] == '/classifications'
+    inx = nil
+    $MAIN_MENU.each_index {|i| if $MAIN_MENU[i][0] == '/repositories/resources' then inx = i end}
+    if !inx.nil?
+      entry = $MAIN_MENU.pop
+      $MAIN_MENU.insert(inx + 1, entry)
+    end
+  end
+  
+%>
