--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -4,16 +4,16 @@
 https://qconv.com/en/convert-pantone-to-hex
 primary 653M 
 */
-$ias_blue: #004ecc	;
+$ias_blue: #03315C;
 /* secondary greige 5807m */
 /* $ias_greige: #E9f0ce; */
 $ias_greige: #f2f2dc;
 /*     lighter blue 659M */
-$ias_lightblue: #5ca6ff;
+$ias_lightblue: #055299;
 /* lighter highlight 131M */
-$ias_light_highlight: #e89e00;
+$ias_light_highlight: #f2d997;
 /* darker highligh 7413M #	*/
-$ias_dark_highlight: #f57300;
+$ias_dark_highlight: #E8BB45;
 /* greenish 7496M */
 $ias_greenish: #5f9e00;
 /* greyish 7530M */ 
@@ -29,7 +29,7 @@ background: -webkit-linear-gradient(90deg, hsla(217, 100%, 40%, 1) 0%, hsla(213,
 filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#004ECC", endColorstr="#5CA6FF", GradientType=1 );
      */
 
-$black: #414141;
+$black: #00171f;
 $darkest: #00171f;
 $white: #ffffff;
 $darkblue: #1e1e1e;
