add a version in comments

--- a/public/views/layout_head.html.erb
+++ b/public/views/layout_head.html.erb
@@ -1,4 +1,4 @@
-
+<!-- IAS VERSION 1.3 -->
 <%= stylesheet_link_tag "#{@base_url}/assets/ias_application.css", media: :all %>
 
 <%= stylesheet_link_tag "#{@base_url}/assets/ias.css", media: :all %>
