--- a/public/views/resources/infinite.html.erb
+++ b/public/views/resources/infinite.html.erb
@@ -1,32 +1,27 @@
 <a name="main" title="<%= t('internal_links.main') %>"></a>
 
-<div id="main-content" class="row resources">
-  <div class="row" id="info_row">
-    <div class="information col-sm-6">
-      <%= render partial: 'shared/id', locals: {:result => @result, :props => { :full => true} } %>
-    </div>
-    <div class="page_actions col-sm-6 right">
+<div id="main-content" class="row">
+  <div class="information col-sm-7">
+    <%= render partial: 'shared/idbadge', locals: {:result => @result, :props => { :full => true} } %>
+  </div>
+  <div class="page_actions col-sm-5 right">
     <%= render partial: 'shared/page_actions', locals: {:record => @result, :title =>  @result.display_string, :url => request.fullpath, :cite => @result.cite } %>
-    </div>
-  </div>
-    <div class="row col-sm-12">
-     <%= render partial: 'shared/result_head', locals: {:result => @result,  :props => { :full => true}} %>
-  </div>
-  <div class="row col-sm-12">
-     <%= render partial: 'shared/breadcrumbs' %>
   </div>
 </div>
 
+<div class="row">
+  <%= render partial: 'shared/breadcrumbs' %>
+</div>
+
+<%= render partial: 'resources/resource_alltabs' %>
 
 <%= javascript_include_tag 'treesync' %>
 <%= javascript_include_tag 'infinite_scroll' %>
 <%= javascript_include_tag 'largetree' %>
 <%= javascript_include_tag 'tree_renderer' %>
 
-<div class="row" id="tabs">
-  <div class="col-sm-9 col-sm-push-3">
-   <%= render partial: 'resources/resource_alltabs' %>    
-    <div class="infinite-record-wrapper row">
+<div class="row">
+  <div class="infinite-record-wrapper col-sm-9 col-sm-push-3">
       <div class="infinite-record-container">
           <div class="root">
               <% waypoint_size = 20 %>
@@ -34,12 +29,14 @@
                   <div class="waypoint" data-waypoint-number="<%= i %>" data-waypoint-size=<%= waypoint_size %> data-uris="<%= refs.map {|r| r['ref']}.join(';') %>">&nbsp;</div>
               <% end %>
           </div>
-       </div>
-     </div>
+      </div>
   </div>
 
   <div id="sidebar" class="sidebar sidebar-container col-sm-3 col-sm-pull-9 resizable-sidebar infinite-tree-sidebar">
-    <div class="infinite-tree-view largetree-container" id='tree-container'></div>
+  <% if AppConfig[:pui_search_collection_from_collection_organization] %>
+    <%= render partial: 'shared/search_collection_form', :locals => {:resource_uri => @result['uri'], :action_text => t('actions.search_in', :type => t('resource._singular'))} %>
+  <% end %>
+  <div class="infinite-tree-view largetree-container" id='tree-container'></div>
   </div>
 </div>
 
@@ -48,7 +45,7 @@
  var syncer = new TreeSync('<%= params[:rid]%>');
  window.syncer = syncer;
 
- var scroll = new InfiniteScrollReplacement('<%= url_for(:action => :show) %>/infinite',
+ var scroll = new InfiniteScroll('<%= url_for(:action => :show) %>/infinite',
                                  $('.infinite-record-wrapper'),
                                  <%= @ordered_records.length %>,
                                  function() {
@@ -66,7 +63,9 @@
                           function() {
                               syncer.treeIsReady(tree);
                           },
-                          $.noop);
+                          function(current_node, tree) {
+                            tree.expandNode(current_node);
+                          });
 
 window.tree = tree;
 </script>
