fix some javascript problems

--- a/public/views/welcome/show.html.erb
+++ b/public/views/welcome/show.html.erb
@@ -30,4 +30,4 @@
       <div class="col-sm-6" id="requests">
        <%= t('brand.welcome_requests').html_safe %>
     </div>
- 
+    <%= javascript_include_tag "#{@base_url}/assets/ias.js" %>
