change typefont css URL

--- a/public/views/layout_head.html.erb
+++ b/public/views/layout_head.html.erb
@@ -1,5 +1,5 @@
-<!-- IAS VERSION 1.5 -->
-<link rel="stylesheet" href="https://use.typekit.net/ioi2oki.css">
+<!-- IAS VERSION 1.6 -->
+<link rel="stylesheet" href="https://use.typekit.net/qtw0fed.css">
 <%= stylesheet_link_tag "#{@base_url}/assets/ias_application.css", media: :all %>
 
 
