display summary for digital objects in results list

--- a/public/views/shared/_result.html.erb
+++ b/public/views/shared/_result.html.erb
@@ -24,7 +24,9 @@
            <% end %>
           </div>
          <% end %>
-       
+       <% if result.class.name == "DigitalObject" %>
+       <%= render partial: "shared/dig_notes", locals: { :result => result } %>
+       <% end %>
 
 
 
